[package]
name = "cb_processor"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
handlebars = "3"
anyhow = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
valico = "3.4.0"