[package]
name = "cb_processor"
version = "0.1.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
clap = "2"
anyhow = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
valico = "3.4.0"
termcolor = "1.1.0"
colored = "2.0.0"
askama = "0.10"
multihash = "0.14"
cid = "0.7"
multibase = "0.9"
reqwest = { version = "0.11", features = ["blocking"] }
